--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container mx-auto px-4">
-        <img src="/Imagem do WhatsApp de 2023-11-24 à(s) 11.31.19_8f3bc64e.jpg" alt="">
+        <img src="./Imagem do WhatsApp de 2023-11-24 à(s) 11.31.19_8f3bc64e.jpg" alt="">
         <h1 class="text-4xl font-bold my-8">Foulder</h1>
         <div id="menu" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
             <!-- Items will be inserted here -->
@@ -48,7 +48,7 @@
     <script>
         const menuItems = [
 
-            { id: 1, name: 'Preto São Gabriel', price: 10.90, image: '/pedra.jpg' },
+            { id: 1, name: 'Preto São Gabriel', price: 10.90, image: './pedra.jpg' },
             
         ];
 
